--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "jsqr": "^1.4.0",
     "next": "16.1.2",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
