--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
+    "@yudiel/react-qr-scanner": "^2.5.1",
     "google-spreadsheet": "^5.0.2",
     "jsqr": "^1.4.0",
     "next": "16.1.2",
