--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@yudiel/react-qr-scanner": "^2.5.1",
+    "canvas-confetti": "^1.9.4",
     "google-spreadsheet": "^5.0.2",
     "jsqr": "^1.4.0",
     "next": "16.1.2",
